--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,7 +1,6 @@
 .form-container {
   display: flex;
   justify-content: center;
-  min-height: calc(100vh - 143px);
 }
 
 .form-header {
