--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,4 +1,5 @@
 .dashboard-container {
+  display: flex;
   background-color: #EDF8FC;
   min-height: calc(100vh - 66px);
 }
@@ -14,7 +15,10 @@
 }
 
 .main-content {
+  flex-grow: 1;
+  margin-left: 250px;
   padding: 20px 30px;
+  overflow-y: auto;
 }
 
 .course-progress {
